3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/living.c, include/living.h: Change type of weight_limit to uint32.
socket/request.c: Remove non-portable assignment to rvalue.
doc/{README_PLUGINS.doc, README_PYTHON.txt, plugins}, doc/Developers/{README,
plugins, python}: Update plugin documentation.
plugin/plugin_python.c, plugin/include/plugin_python.h: Whitespace changes,
    remove obsolete comments.
plugin/plugin_python.c: Only set WhoAmI when running the command registered by
    CFPython.RegisterCommand. Set default result value to "success".
plugin/plugin_python.c: Fix memory leaks by freeing old strings before
   assigning a new value.
plugin/plugin_python.c: Use correct format specifiers for item values and
   experience values.
plugin/plugin_python.c: Make CFPython.IsCanBePicked return whether the object
   can be picked up. (Did return whether the object cannot be picked up.)
plugin/plugin_python.c: Do not return a pointer to a variable on the stack.
server/plugins.c: Fix pointer type mismatch while processing
   CFPython.RegisterCommand.
plugin/plugin_python.c: Change second parameter of CFPython.CheckMap to use
   a map object instead of a map name. Now it works for tiles maps.
acinclude.m4: Add check for python 2.4 to match this file with aclocal.m4.
Andreas Kirschbaum 2005-03-06

plugin/plugin_python.c: Increase limits of values the Python script may set
   to the ranges given by objects in the archetypes file.
Andreas Kirschbaum 2005-02-28

common/object.c, include/libproto.h: change nrof parameter of get_split_ob to
   uint32 type.
server/c_object.c, include/sproto.h: change nrof parameter of drop_object to
   uint32 type.